Renaming to RecipeApi and adding the first models. Need to update DTOs and add the first migration.

--- a/RecipeApi/RecipeApi.csproj
+++ b/RecipeApi/RecipeApi.csproj
@@ -4,10 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>recipe_api</RootNamespace>
+    <RootNamespace>RecipeApi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
